<resources>
    <string name="app_name">Projeto1</string>
    <string name="action_settings">Definições</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="doentes">Doentes</string>
    <string name="medicos">Medicos</string>
    <string name="consultas">Consultas</string>
    <string name="data" translatable="false">24-02-2022</string>
    <string name="nomeMedico" translatable="false">Alberto</string>
    <string name="eliminarLivro" translatable="false">Eliminar Livro</string>
    <string name="Data">Data</string>
    <string name="eliminarConsulta">Eliminar Consulta</string>
    <string name="NomeDoente" translatable="false">João</string>
    <string name="Guardar">Guardar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Inserir">Inserir</string>
    <string name="Alterar">Alterar</string>
    <string name="menu_principal_label">Menu principal</string>
    <string name="lista_consultas_label">Consultas</string>
    <string name="Data_obrigatorio">Preencha a Data</string>
    <string name="Doente_obrigatorio">Escolha um Doente</string>
    <string name="Medico_obrigatorio">Escolha um Medico</string>
    <string name="erro_guardar_consulta">Erro ao guardar consulta</string>
    <string name="consulta_guardado_sucesso">Consulta guardado com sucesso</string>
    <string name="eliminar_consulta_label">Eliminar consulta</string>
    <string name="confirma_eliminar_consulta">Tem a certeza que quer eliminar a consulta?</string>
    <string name="eliminar">Eliminar</string>
    <string name="erro_eliminar_consulta">Erro ao Eliminar consulta</string>
    <string name="consulta_eliminado_sucesso">consulta eliminado com sucesso</string>
    <string name="inserir_consulta_label">Inserir consulta</string>
    <string name="editar_consultas_label">Editar consultas</string>
    <string name="Doentes">Doentes</string>
    <string name="eliminarMedico">Eliminar Medico</string>
    <string name="Nome">Nome</string>
    <string name="CartaoCidadao">Cartao cidadao</string>
    <string name="Especialidades">Especialidades</string>
    <string name="inserir_medico_label">Inserir Medicos</string>
    <string name="nome_obrigatorio">Preencha o nome</string>
    <string name="cartaoCidadao_obrigatorio">Preencha o Cartao cidadao</string>
    <string name="especialidade_obrigatoria">Escolha uma especialidade</string>
    <string name="medico_guardado_sucesso">Medico guardado com sucesso</string>
    <string name="erro_guardar_medico">Erro ao guardar medico</string>
    <string name="TipoEspecialidades">Tipo de especialidade</string>
    <string name="eliminarEspecialidade">Eliminar especialidade</string>
    <string name="inserir_tipo_especialidade">inserir tipo especialidade</string>
    <string name="tipodoenca">Tipo de doenca</string>
    <string name="eliminar_doenca_label">Eliminar doenca</string>
    <string name="Doencas">Doencas</string>
    <string name="EliminarDoentes">Eliminar Doentes</string>
    <string name="teste" translatable="false">teste</string>
    <string name="preencha_Tipo_Doenca">preencha o tipo de doenca</string>
    <string name="Doenca_guardado">Doenca guardado com sucesso</string>
    <string name="Doenca_erro">erro ao guardar tipo de doenca</string>
    <string name="Preencha_DataNascimento">preencha a data de nascimento</string>
    <string name="Escolha_Doenca">Escolha uma doença</string>
    <string name="Doente_guardado">doente guarado com sucesso</string>
    <string name="Doente_erro">erro ao guardar doente</string>
    <string name="Preencha_Tipo_Especialidades">preencha o tipo de especialidade</string>
    <string name="Especialidade_guardado">Especialidade guardado com sucesso</string>
    <string name="Especialidade_erro">erro ao guardar tipo de especialidade</string>
    <string name="Eliminar_Doenca_label">Eliminar doenca</string>
    <string name="confirma_eliminar_doenca">Tem a certeza que pertende eliminar doenca?</string>
    <string name="erro_eliminar_doenca">Erro ao eliminar Tipo de doenca</string>
    <string name="doenca_eliminado_sucesso">tipo de doenca eliminado com sucesso</string>
    <string name="eliminar_doentes_label">Eliminar doente</string>
    <string name="confirma_eliminar_doente">Tem a certeza que pertende eliminar o doente?</string>
    <string name="erro_eliminar_doente">Erro ao eliminar doente</string>
    <string name="doente_eliminado_sucesso">doente eliminado com sucesso</string>
    <string name="eliminar_especialidade_label">Eliminar especialidade</string>
    <string name="confirma_eliminar_especialidade">Tem a certeza que pertende eliminar especialidade?</string>
    <string name="erro_eliminar_especialidade">Erro ao eliminar Tipo de especialidade</string>
    <string name="especialidade_eliminado_sucesso">tipo de especialidade eliminado com sucesso</string>
    <string name="eliminar_medico_label">Eliminar medico</string>
    <string name="confirma_eliminar_medico">Tem a certeza que pertende eliminar o medico?</string>
    <string name="erro_eliminar_medico">Erro ao eliminar medico</string>
    <string name="medico_eliminado_sucesso">medico eliminado com sucesso</string>
    <string name="alterar_data_label">Alterar Data</string>
    <string name="inserir_doencas_label">Inserir doencas</string>
    <string name="alterar_doencas_label">Alterar doncas</string>
    <string name="inserir_doentes_label">Inserir doentes</string>
    <string name="alterar_doentes_label">Alterar doentes</string>
    <string name="inserir_especialidades_label">Inserir especialidades</string>
    <string name="alterar_especialidades_label">Alterar especialidades</string>
    <string name="inserir_medicos_label">Inserir medicos</string>
    <string name="alterar_medicos_label">Alterar medicos</string>
</resources>